--- a/src/components/Dashboard/LineChart/linechart.css
+++ b/src/components/Dashboard/LineChart/linechart.css
@@ -169,11 +169,11 @@ li.currency--line--chart--navigation--active {
 	}
 
 	.currency--line--chart--details--price h3 {
-		font-size: 2em;
+		font-size: 1.8em;
 	}
 
 	.currency--line--chart--custom--select--selected {
-		font-size: 1.2em;
+		font-size: 1.1em;
 	}
 
 	.currency--line--chart--select--container {
